[tool.poetry]
name = "dash-extensions"
version = "1.1.0rc12"
description = "Extensions for Plotly Dash."
authors = ["emher <emil.h.eriksen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://dash-extensions.com"
repository = "https://github.com/thedirtyfew/dash-extensions"
include = [
    "dash_extensions/*.py",
    "dash_extensions/dash_extensions.min.js",
    "dash_extensions/dash_extensions.min.js.map",
    "dash_extensions/async-lottie.js",
    "dash_extensions/async-lottie.js.map",
    "dash_extensions/async-mermaid.js",
    "dash_extensions/async-mermaid.js.map",
    "dash_extensions/metadata.json",
    "dash_extensions/package-info.json",
    "README.md",
    "LICENSE",
    "package.json"
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
dash = ">=3.0.0rc2"
more-itertools = ">=10.2.0, <11.0.0"
jsbeautifier = "^1.14.3"
Flask-Caching = "^2.1.0"
dash-mantine-components = {version = "1.0.0rc1", optional = true}
dataclass-wizard = "^0.30.1"
pydantic = "^2.10.1"

[tool.poetry.extras]
mantine = ["dash-mantine-components"]

[tool.poetry.group.dev.dependencies]
dash = {extras = ["dev", "testing"], version = "3.0.0rc2"}
pytest-cov = "^6.0.0"
pandas = ">=2.2.3"
quart = "^0.20.0"
starlette = ">=0.36.2,<0.41.0"
requests = "^2.32.2"
certifi = ">=2023.7.22,<2025.0.0"
uvicorn = "^0.32.1"
sse-starlette = "^1.2.1"
urllib3 = "^1.26.18"
pre-commit = "^3.7.1"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
