[project]
name = "dash-extensions"
version = "2.0.3"
description = "Extensions for Plotly Dash."
authors = [
    { name = "emher", email = "emil.h.eriksen@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.0",
    "more-itertools>=10.6.0",
    "jsbeautifier>=1.15.4",
    "Flask-Caching>=2.3.1",
    "dataclass-wizard>=0.35.0",
    "pydantic>=2.10.6",
]

[project.urls]
homepage = "https://dash-extensions.com"
repository = "https://github.com/emilhe/dash-extensions"

[dependency-groups]
dev = [
    "dash[dev, testing]>=3.0.0",
    "pytest-cov>=6.0.0",
    "pandas>=2.2.3",
    "requests>=2.32.2",
    "ruff>=0.11.0",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
    "selenium>=4.2.0",
    "wheel>=0.45.1",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.ruff]
line-length = 120
target-version = "py313"
